fix: post voting on mobile

--- a/resources/less/forum/alternateLayout.less
+++ b/resources/less/forum/alternateLayout.less
@@ -22,6 +22,10 @@
 
 .DiscussionListItem-votes.alternateLayout {
   top: 4px;
+
+  @media @phone {
+    left: 8px;
+  }
 }
 
 .Post-votes {
@@ -38,8 +42,14 @@
 
   left: 0;
 
-  @media @phone {
-    left: 8px;
+  @screen-tablet-under: @screen-tablet - 0.01px;
+
+  @media (max-width: @screen-tablet-under) {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    top: 0;
+    left: 0;
   }
 
   border-radius: 4px;
